<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMenu">

    <VideoView
        android:id="@+id/backgroundRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/my_back_register"
        />

    <EditText
        android:id="@+id/editNick"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:textSize="16sp"
        android:hint="@string/NickInput"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"

        android:hint="@string/password"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword2"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"

        android:hint="@string/password2"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="240dp"
        android:layout_height="60dp"

        android:layout_marginBottom="250dp"
        android:background="@drawable/button"
        android:gravity="center"

        android:text="@string/Register"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.122"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editNick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/loginButton2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"

        android:background="@drawable/buttom_round"
        android:gravity="center"
        android:text="Отправить"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editNick"
        app:layout_constraintHeight_percent="0.122"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="376dp" />

    <ImageButton
        android:id="@+id/backbut"
        android:background="#00000000"

        android:scaleType="centerCrop"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />


</androidx.constraintlayout.widget.ConstraintLayout>